--- a/public/style.css
+++ b/public/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .btn-primary {
-    background-color: var(--dark-pink);
+    background-color: var(--light-pink);
     color: var(--white);
     border: 2px solid var(--dark-pink);
 }
@@ -512,7 +512,7 @@ body {
   border-radius: 8px;
   text-decoration: none;
   color: white;
-  background-color: #ff66b2;
+  background-color: var(--dark-pink);
   border: none;
   transition: background-color 0.3s;
 }
@@ -531,4 +531,103 @@ body {
   .thought-cloud {
     animation: floatCloud 4s ease-in-out infinite;
   }
-`
+
+.contact-page {
+  padding: 3rem 2rem;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: var(--light-pink);
+  min-height: 100vh;
+}
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  gap: 3rem;
+  max-width: 1200px;
+  margin: auto;
+  align-items: center;
+}
+
+.contact-image img {
+  width: 100%;
+  border-radius: 12px;
+  object-fit: cover;
+  height: auto;
+}
+
+.contact-form-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  color: var(--dark-pink);
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 12px;
+  margin-bottom: 1rem;
+  border: none;
+  border-bottom: 2px solid #f0ecec;
+  background: transparent;
+  font-size: 1rem;
+  outline: none;
+}
+
+.contact-form button {
+  background-color: var(--dark-pink);
+  color: var(--white);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s ease;
+  width: fit-content;
+}
+
+.contact-form button:hover {
+  background-color: #010100;
+}
+
+.contact-info {
+  margin-top: 2rem;
+  font-size: 0.95rem;
+  color: #e10c7e;
+}
+
+.contact-info p {
+  margin: 0.7rem 0;
+}
+
+.social-icons a img {
+  width: 20px;
+  margin-right: 10px;
+  filter: grayscale(100%);
+  transition: filter 0.3s;
+}
+
+.social-icons a:hover img {
+  filter: grayscale(0%);
+}
+
+.back-button {
+  margin-top: 2rem;
+  background-color: var(--dark-pink);
+  color: #e8dce1;
+  border: none;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
+.thank-you-message {
+  margin-top: 1rem;
+  font-size: 1.7rem;
+  color:var(--dark-pink);
+  font-weight: 500;
+  text-align: center;
+  tex
+}
